--- a/Labs/Labs/Labs.csproj
+++ b/Labs/Labs/Labs.csproj
@@ -2,11 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Lab4\Lab4.csproj" />
+    <ProjectReference Include="..\Lab7\Lab7.csproj" />
   </ItemGroup>
 
   <ItemGroup>
